maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:22: error: ';' expected but 'if' found.
    } if (getDirection() != Direction.EAST) {
      ^